--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,25 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <style>
+    .spinner {
+      position: fixed;
+      z-index: 1031;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+        </style>
 </head>
 <body class="mat-typography">
-
-  <app-root></app-root>
+  <app-root>        
+    <div class="spinner">
+      <div class="spinner-border spinner-border-sm" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+      <i class="fa fa-spinner fa-spin"></i>
+      <small>Preparing your Application</small>
+    </div>
+  </app-root>
 </body>
 </html>
